2017-02-05	"Harp not on that string."

		GNUmakefile :
		- upon an error from a test binary, now dumps entire binary

2017-02-04	Better handling of GNU indirect functions.

		share/innocent-pear/doge-01.cc ,
		share/innocent-pear/doge-07.cc ,
		share/innocent-pear/doge-i.h ,
		share/innocent-pear/doge-n.ld :
		- implemented .rel{,a}.iplt + ::__pthread_initialize_minimal()
		  hack

		share/innocent-pear/doge-99.cc :
		- tweaked

		bin/innocent-pear-front-end.tcc :
		- now tries to rope in -lstdc++, -latomic, -lc, -lgcc, and/or
		  -lgcc_eh even if not linking statically
		- implemented .rel{,a}.iplt + ::__pthread_initialize_minimal()
		  hack

		configure :
		- now looks for __ELF__, ::getauxval(.), and ::__pthread_
		  initialize_minimal() target-side

		GNUmakefile :
		- now defines/undefines innocent_pear_FIX_ELF_IFUNC both
		  host-side and target-side, and innocent_pear_HAVE_FUNC_
		  GETAUXVAL host-side

		README.md :
		- updated bug description for GNU "indirect functions"

2017-02-02	Can now scramble C and C++ library routines in statically-
		-linked programs.

		bin/innocent-pear-front-end.tcc :
		- at link time, now tries to rope in -lstdc++, -latomic,
		  -lc, -lgcc, and/or -lgcc_eh after each doge-??.cc module,
		  if linking statically

		GNUmakefile ,
		configure :
		- detect whether we are using libstdc++ target-side, by
		  looking for ::__gnu_cxx::__verbose_terminate_handler()

		README.md :
		- added bug description for GNU "indirect functions"

		lolwutconf/ :
		- bumped to d17b1ca198

2017-02-01	Tainting and range division.  (4)

		include/innocent-pear/orly.h :
		- orly_impl<...>::taint(y, t) no longer taints based on t's
		  numeric magnitude

2017-01-31	Tainting and range division -- now with a twist.  (2)

		include/innocent-pear/kthxbai.h ,
		include/innocent-pear/omg.h :
		- upped the maximum number of iterations for inner loops

		include/innocent-pear/orly.h :
		- orly_impl<...>::taint(y, t) now has more probability mass